[package]
name = "p17_math_geometry"
version.workspace = true
edition.workspace = true

[lib]
name = "p17_math_geometry"
path = "src/lib.rs"

[[example]]
name = "p228_excel_sheet_column_title"
path = "examples/p228_excel_sheet_column_title.rs"

[[example]]
name = "p229_greatest_common_divisor_of_strings"
path = "examples/p229_greatest_common_divisor_of_strings.rs"

[[example]]
name = "p230_insert_greatest_common_divisors_in_linked_list"
path = "examples/p230_insert_greatest_common_divisors_in_linked_list.rs"

[[example]]
name = "p231_transpose_matrix"
path = "examples/p231_transpose_matrix.rs"

[[example]]
name = "p232_rotate_matrix"
path = "examples/p232_rotate_matrix.rs"

[[example]]
name = "p233_spiral_matrix"
path = "examples/p233_spiral_matrix.rs"

[[example]]
name = "p234_set_zeroes_in_matrix"
path = "examples/p234_set_zeroes_in_matrix.rs"

[[example]]
name = "p235_non_cyclical_number"
path = "examples/p235_non_cyclical_number.rs"

[[example]]
name = "p236_plus_one"
path = "examples/p236_plus_one.rs"

[[example]]
name = "p237_roman_to_integer"
path = "examples/p237_roman_to_integer.rs"

[[example]]
name = "p238_pow_x_n"
path = "examples/p238_pow_x_n.rs"

[[example]]
name = "p239_multiply_strings"
path = "examples/p239_multiply_strings.rs"

[[example]]
name = "p240_count_squares"
path = "examples/p240_count_squares.rs"
